[package]
name = "my_project"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.91"
chrono = { version = "0.4.45", features = ["serde"] }
csv = "1.4.0"
directories = "6.0.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = ["full"] }
